--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^16.11.7",
     "esbuild": "^0.23.0",
+    "form-data-encoder": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "obsidian": "latest",
     "tslib": "^2.3.1",
