--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^16.11.7",
+    "crypto-js": "^4.2.0",
     "esbuild": "^0.23.0",
     "form-data-encoder": "^3.0.0",
-    "jsonwebtoken": "^9.0.2",
     "obsidian": "latest",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
